# mysql-mcp-pro

./: .env.example  .gitignore  README.en.md  README.md  pyproject.toml  server.py  smithery.yaml
scripts/: _db_config.py  cleanup.py  diag.py  setup_test_db.py  test_mcp.py  test_tools.py  test_v2.py
